--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,1 +1,60 @@
-<p>forgot-password works!</p>
+<div class="content_body">
+    <div class="content_margin">
+      <div class="content_grid_padre">
+        <div class="content_grid_h1">
+          <div class="title_page">
+            <h1>Punto de venta</h1>
+            <h4>Ingrese su correo</h4>
+          </div>
+          <!--cierra div title pagina-->
+          <div class="form_data">
+            <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
+              <p>
+                <mat-form-field appearance="outline" class="inputs_css">
+                  <mat-label>Email</mat-label>
+  
+                  <input
+                    type="email"
+                    matInput
+                    placeholder="Email"
+                    autocomplete="off"
+                    autofocus=""
+                    required
+                    formControlName="username"
+                  />
+  
+                  <mat-icon matSuffix>alternate_email</mat-icon>
+                  <mat-error *ngIf="resetForm.get('username')?.invalid">{{
+                    getErrorMessage()
+                  }}</mat-error>
+                </mat-form-field>
+              </p>
+  
+              <button
+                type="submit"
+                class="btn_int"
+                mat-raised-button
+                style="background: #fd9727; color: white"
+                [disabled]="resetForm.invalid"
+              >
+                Enviar link para restablecer contraseña
+              </button>
+            </form>
+          </div>
+          <div class="registrate">
+            <small
+              ><a routerLink="../login">Ya pude recordar mi contraseña</a></small
+            >
+          </div>
+          <!--cierra div texto registrate-->
+        </div>
+        <!--cierra div content grid hino1 -->
+        <div class="content_grid_h2"></div>
+        <!--cierra div content grid hijo2 -->
+      </div>
+      <!--cierra div content grid padre-->
+    </div>
+    <!--cierra div content_margin-->
+  </div>
+  <!--cierra div content_body-->
+  
