creacion de componentes, servicios, models, pipes
se crao todo lo necesario para el roldel recepcionista

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -116,6 +116,72 @@
     
     </div>
 
+    <!--Apartados de RECEPCIONISTA--->
+    <div class="row mt-4">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Ventas</h4>
+            <p class="card-text">Configura las ventas de tu gimansio</p>
+            <a class="btn btn-gym" routerLink="../productos">Configurar</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Membresias</h4>
+            <p class="card-text">Configura las membresias de tu gimanasio</p>
+            <a class="btn btn-gym" routerLink="../listaMembresias">Configurar</a>
+          </div>
+        </div>
+      </div> 
+    </div>
+    
+    <div class="row mt-4">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Inventarios</h4>
+            <p class="card-text">Configura los inventarios de tu gimnasio</p>
+            <a class="btn btn-gym" routerLink="../inventarios">Configurar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Registro</h4>
+            <p class="card-text">Registrar a un cliente</p>
+            <a class="btn btn-gym" routerLink="../registrar">Registrar Ahora</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row mt-4">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Ventas</h4>
+            <p class="card-text">Consultar las ventas</p>
+            <a class="btn btn-gym" routerLink="../Ventas">Configurar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Ver corte</h4>
+            <p class="card-text">Consultar el corte de caja</p>
+            <a class="btn btn-gym" routerLink="../verCorte">Ver Ahora</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     
   </div>
 </body>
