--- a/src/app/modules/reports/reports.component.html
+++ b/src/app/modules/reports/reports.component.html
@@ -1,18 +1,16 @@
-<p>membresias-lista works!</p>
-
 <h2>Estadisticas - reportes, etc...</h2>
 <form [formGroup]="form">
   <p>
-    <label for="sucursal">Sucursal:</label>
     <mat-form-field appearance="outline">
-      <mat-label>Seleccionar</mat-label>
+      <mat-label>Sucursal</mat-label>
       <mat-select id="sucursal" formControlName="sucursal">
-        <mat-option value="1">Mostrar todos...</mat-option>
+        <mat-option value="0">Mostrar todos...</mat-option>
+        <mat-option *ngFor="let opcion of listaSucursales" [value]="opcion.id"> {{ opcion.sucursal }}</mat-option>
       </mat-select>
     </mat-form-field>
   </p>
   <p>
-    <mat-form-field>
+    <mat-form-field appearance="outline">
       <mat-label>Periodo</mat-label>
       <mat-date-range-input [rangePicker]="picker">
         <input matStartDate placeholder="Fecha inicial" formControlName="p_inicial">
@@ -25,8 +23,10 @@
     
     
   </p>
-  <button (click)="consult()">Consultar información...</button>
+  <button class="btn btn-danger" (click)="consult()">Consultar información...</button>
 </form>
+<br/>
+<button class="btn btn-info" (click)="requestSerialPort()">Conectar y Enviar Datos</button>
 <div>
     <canvas id="myChart"></canvas>
 </div>
