actualizacion de componentes y errores
se actualizaron los errores que daba al ejecutarlo, y se añadio el componente de productoo-venta

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -182,6 +182,28 @@
       </div>
     </div>
 
+    <div class="row mt-4">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Productos vendidos</h4>
+            <p class="card-text">Consultar los productos vendidos</p>
+            <a class="btn btn-gym" routerLink="../productosVendidos">Consultar</a>
+          </div>
+        </div>
+      </div>
+
+      <!--<div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Ver corte</h4>
+            <p class="card-text">Consultar el corte de caja</p>
+            <a class="btn btn-gym" routerLink="../verCorte">Ver Ahora</a>
+          </div>
+        </div>
+      </div>-->
+    </div>
+
     
   </div>
 </body>
