cambio de idGym y nombreGym

--- a/src/app/modules/crearProducto/crearProducto.component.html
+++ b/src/app/modules/crearProducto/crearProducto.component.html
@@ -14,7 +14,7 @@
           <fieldset>
             <h1>Datos generales</h1>
 
-            <label for="descuento" class="large-text"
+           <!-- <label for="descuento" class="large-text"
               >¿Tendra descuento? **</label
             >
             <mat-radio-group
@@ -62,12 +62,12 @@
                 >
               </mat-form-field>
             </fieldset>
-
+-->
           <br>
             <div class="row">
             <div class="col-sm-6">
               <br><br>
-              <p>
+             <!-- <p>
                 <label for="titulo" class="large-text" >Fecha creación:</label>
                 <mat-form-field appearance="outline" class="inputs_properties" style="margin-right: 35px;" required >
                   <mat-label>Fecha de creacion</mat-label>
@@ -80,10 +80,8 @@
                     autocomplete="off"
                   />
                 </mat-form-field>
-              </p>
+              </p>-->
               <p>
-
-
                 <label style="margin-right: 85px;">Marca:</label>
                 <mat-form-field appearance="outline" class="inputs_properties" style="margin-right: 35px;" required>
                   <mat-label>Marca</mat-label>
@@ -109,7 +107,7 @@
                   >
                 </mat-form-field>
               </p>
-              <p>
+             <!-- <p>
                 <label  style="margin-right: 15px;">Precio compra:</label>
                 <mat-form-field appearance="outline" class="inputs_properties" style="margin-right: 35px;" required>
                   <mat-label>Precio de compra</mat-label>
@@ -137,7 +135,8 @@
                     ><strong class="txt_msg">**Campo requerido</strong></mat-error
                   >
                 </mat-form-field>
-              </p>
+              </p>-->
+
               <p>
                 <label style="margin-right: 60px;">Descripción:</label>
                 <mat-form-field
@@ -192,7 +191,7 @@
                   >
                 </mat-form-field>
               </p>
-              <P>
+             <!-- <P>
                 <label style="margin-right: 90px;">Precio:</label>
                 <mat-form-field appearance="outline" class="inputs_properties" style="margin-right: 35px;" required>
                   <mat-label >Precio de venta</mat-label>
@@ -220,7 +219,7 @@
                     ><strong class="txt_msg">**Campo requerido</strong></mat-error
                   >
                 </mat-form-field>
-              </P>
+              </P>-->
               <p>
                 <label  style="margin-right: 10px;">Codigo de barra:</label>
                 <mat-form-field appearance="outline" class="inputs_properties" style="margin-right: 35px;" required>
