--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -166,7 +166,7 @@
           <div class="card-body">
             <h4 class="card-title">Ventas</h4>
             <p class="card-text">Consultar las ventas</p>
-            <a class="btn btn-gym" routerLink="../Ventas">Configurar</a>
+            <a class="btn btn-gym" (click)="ventas()">Configurar</a>
           </div>
         </div>
       </div>
