--- a/src/app/modules/productos/productos.component.html
+++ b/src/app/modules/productos/productos.component.html
@@ -34,10 +34,10 @@
           <td mat-cell *matCellDef="let producto"> {{ producto.descripcion }} </td>
         </ng-container>
       
-        <ng-container matColumnDef="precio">
+       <!-- <ng-container matColumnDef="precio">
           <th mat-header-cell *matHeaderCellDef> Precio </th>
           <td mat-cell *matCellDef="let producto"> {{ producto.precio_de_venta }} </td>
-        </ng-container>
+        </ng-container>-->
       
         <ng-container matColumnDef="estatus">
           <th mat-header-cell *matHeaderCellDef> Estatus </th>
@@ -64,8 +64,8 @@
           </td>
         </ng-container>
       
-        <tr mat-header-row *matHeaderRowDef="['nombre', 'descripcion', 'precio', 'estatus', 'categoria', 'acciones']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['nombre', 'descripcion', 'precio', 'estatus', 'categoria', 'acciones'];"></tr>
+        <tr mat-header-row *matHeaderRowDef="['nombre', 'descripcion', 'estatus', 'categoria', 'acciones']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['nombre', 'descripcion', 'estatus', 'categoria', 'acciones'];"></tr>
       </table>
       
       
