se modificaron algunas cosas

--- a/src/app/modules/alta-categoria/alta-categoria.component.css
+++ b/src/app/modules/alta-categoria/alta-categoria.component.css
@@ -15,6 +15,10 @@
     width: 230px;
     padding-left: 15px;
   }
+
+  .custom-tab-group .mat-tab-labels {
+    justify-content: flex-end;
+}
   
   /* Estilos para .label-with-margin */
   .label-with-margin {
