--- a/src/app/modules/sucursal-alta/sucursal-alta.component.html
+++ b/src/app/modules/sucursal-alta/sucursal-alta.component.html
@@ -5,7 +5,7 @@
 <br/>
 <br/>
 <form [formGroup]="formularioSucursales" class="responsive-form">
-	<div class="mi-div-con-borde responsive-div">
+	<div class="responsive-div">
 		<div style="color: red;">{{message}}</div>
 		<br />
 		<div class="row">
