--- a/src/app/modules/entradas/entradas.component.css
+++ b/src/app/modules/entradas/entradas.component.css
@@ -24,6 +24,12 @@
     display: inline-block;
 }
 
+
+.text-left-custom {
+    text-align: left !important;
+}
+
+
 /**propiedades titulo pagina**/
 .title_page {
     margin-left: 17%;
@@ -33,14 +39,14 @@
 
 /**propiedades contendor margen**/
 .content_margin {
-    width: 80%;
+    width: 90%;
     margin: auto;
 }
 
 /**propiedades contenedor formulario**/
 .form_data {
     margin: auto;
-    text-align: center;
+    
     padding-bottom: 15px;
 }
 
@@ -82,25 +88,24 @@
     font-weight: bold;
 }
 
-
-
 .table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    table-layout: fixed; /* Establecer el ancho de la tabla como fijo */
  }
- 
- .table th, .table td {
+
+.table th, .table td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
+    width: 25%; /* Distribuir el ancho equitativamente entre las cuatro columnas */
  }
- 
- .table th {
+
+.table th {
     background-color: #f2f2f2;
  }
- 
- .table tbody tr:nth-child(even) {
+
+.table tbody tr:nth-child(even) {
     background-color: #f9f9f9;
  }
- 
