--- a/src/app/modules/entradas/entradas.component.html
+++ b/src/app/modules/entradas/entradas.component.html
@@ -1,197 +1,227 @@
 <div class="container mt-4">
-   <div class="mi-div-con-borde responsive-div">
-      <h2 class="mb-3">
-         Registra la entrada de un producto para la sucursal: {{ ubicacion }}
-      </h2>
-      <div class="content_margin">
-         <div class="form_data">
-            <form [formGroup]="form" (ngSubmit)="registrar()"  >
-            <div class="row">
-               <div class="col-sm-12">
-                  <p>
-                     <label style="margin-right: 46px;">Productos:</label>
-                     <mat-form-field appearance="outline" style="width: 80%;" >
-                        <mat-label>Productos</mat-label>
-                        <mat-select
-                        id="idProducto"
-                        name="idProducto"
-                        formControlName="idProducto"
-                        (ngModelChange)="infoProducto(showProduct.value)"
-                        #showProduct
-                        >
-                        <mat-option
-                        *ngFor="let item of listaProductos"
-                        [value]="item.idProducto"
-                        >{{ item.nombre }}</mat-option
-                           >
-                        </mat-select>
-                        <mat-error *ngIf="form.get('idProducto')?.hasError('required')"
-                           ><strong class="txt_msg">**Campo requerido</strong></mat-error
-                           >
-                     </mat-form-field>
-                  </p>
+   <div class="responsive-div">
+      <div>
+         <mat-tab-group>
+            <mat-tab label="Entrada de producto" style="font-size: xx-large;">
+               <br><br>
+               <label style="font-size: 17px; margin-left: 50px;">
+                  Registra la entrada de un producto para la sucursal: {{ ubicacion }}
+               </label>
+               <br><br><br>
+               <div class="content_margin">
+                  <div class="form_data">
+                     <form [formGroup]="form"  >
+                        <div class="row">
+                           <label style="margin-right: 46px;">Productos:</label>
+                        </div>
+                     <div class="row">
+                        <div class="col-sm-12">
+                           <p>
+                              <mat-form-field appearance="outline" style="width: 100%;" >
+                                 <mat-label>Productos</mat-label>
+                                 <mat-select
+                                 id="idProducto"
+                                 name="idProducto"
+                                 formControlName="idProducto"
+                                 (ngModelChange)="infoProducto(showProduct.value)"
+                                 #showProduct
+                                 >
+                                 <mat-option
+                                 *ngFor="let item of listaProductos"
+                                 [value]="item.idProducto"
+                                 >{{ item.nombre }}</mat-option
+                                    >
+                                 </mat-select>
+                                 <mat-error *ngIf="form.get('idProducto')?.hasError('required')"
+                                    ><strong class="txt_msg">**Campo requerido</strong></mat-error
+                                    >
+                              </mat-form-field>
+                           </p>
+                        </div>
+                     </div>
+                     <div class="row">
+                    <!-- <div class="col-sm-5">
+                        <p>
+                           <label style="margin-right: 10px;">Fecha:</label>
+                           <mat-form-field appearance="outline">
+                            <mat-label>Fecha de ingreso del producto</mat-label>
+                            <input
+                            id="fechaEntrada"
+                            type="text"
+                            matInput
+                            [value]="fechaRegistro"
+                            [disabled]="true"
+                            autocomplete="off"
+                            />
+                         </mat-form-field>
+                        </p>
+                     </div>-->
+                     
+                     <div class="row">
+                        <div class="col-sm-4">
+                            <p class="text-left">Cantidad:</p>
+                        </div>
+                        <div class="col-sm-3">
+                            <label class="text-left">Precio compra:</label>
+                        </div>
+                        <div class="col-sm-3">
+                            <label class="text-left">Precio venta:</label>
+                        </div>
+                    </div>
+                    
+                <div class="row">
+                  <div class="col-sm-4">
+                     <p>
+                        
+                        <mat-form-field appearance="outline" style=" width: 100%;">
+                         <mat-label>Cantidad de producto</mat-label>
+                         <input
+                            type="number"
+                            min="0"
+                            matInput
+                            placeholder="Cantidad de producto"
+                            autocomplete="off"
+                            formControlName="cantidad"
+                            id="cantidad"
+                            [errorStateMatcher]="matcher"
+                            
+                            />
+                         <mat-error
+                            *ngIf="
+                            form.get('cantidad')?.hasError('pattern') &&
+                            !form.get('cantidad')?.hasError('required')
+                            "
+                            >
+                            <strong class="txt_msg">**Solo se admiten numeros enteros</strong>
+                         </mat-error>
+                         <mat-error *ngIf="form.get('cantidad')?.hasError('required')"
+                            ><strong class="txt_msg">**Campo requerido</strong></mat-error
+                            >
+                      </mat-form-field>
+                     </p>
+                   
+                  </div>
+                  <div class="col-sm-3">
+                     <p>
+                        
+                        <mat-form-field appearance="outline"  style=" width: 100%;" required>
+                          <mat-label>Precio de compra</mat-label>
+                          <input
+                            matInput
+                            placeholder="$"
+                            type="number"
+                            min="0"
+                            step="0.01"
+                            autocomplete="off"
+                            formControlName="precioCompra"
+                            id="precioCompra"
+                            [errorStateMatcher]="matcher"
+                          />
+            
+                          <mat-error
+                            *ngIf="
+                              form.get('precioCompra')?.hasError('pattern') &&
+                              !form.get('precioCompra')?.hasError('required')
+                            "
+                          >
+                            <strong class="txt_msg">**Solo se admiten dos decimales</strong>
+                          </mat-error>
+                          <mat-error *ngIf="form.get('precioCompra')?.hasError('required')"
+                            ><strong class="txt_msg">**Campo requerido</strong></mat-error
+                          >
+                        </mat-form-field>
+                      </p>
+                  </div>
+                  <div class="col-sm-3">
+                     <P>
+                        <mat-form-field appearance="outline"  style=" width: 100%;" required>
+                          <mat-label >Precio de venta</mat-label>
+                          <input
+                            matInput
+                            placeholder="$"
+                            type="number"
+                            min="0"
+                            step="0.01"
+                            autocomplete="off"
+                            formControlName="precioVenta"
+                            id="precioVenta"
+                            [errorStateMatcher]="matcher"
+                          />
+            
+                          <mat-error
+                            *ngIf="
+                              form.get('precioVenta')?.hasError('pattern') &&
+                              !form.get('precioVenta')?.hasError('required')
+                            "
+                          >
+                            <strong class="txt_msg">**Solo se admiten dos decimales</strong>
+                          </mat-error>
+                          <mat-error *ngIf="form.get('precioVenta')?.hasError('required')"
+                            ><strong class="txt_msg">**Campo requerido</strong></mat-error
+                          >
+                        </mat-form-field>
+                      </P>
+                  </div>
+
+                  <div class="col-sm-2">
+                     <button type="button" mat-raised-button (click)="agregarATabla()" style="margin-top: 10px;background-color: #fde49c; width: 100%; height: 35px;"><mat-icon>add</mat-icon>Agregar</button>
+                   </div>
                </div>
-            </div>
-            <div class="row">
-            <div class="col-sm-5">
-               <p>
-                  <label style="margin-right: 10px;">Fecha:</label>
-                  <mat-form-field appearance="outline">
-                   <mat-label>Fecha de ingreso del producto</mat-label>
-                   <input
-                   id="fechaEntrada"
-                   type="text"
-                   matInput
-                   [value]="fechaRegistro"
-                   [disabled]="true"
-                   autocomplete="off"
-                   />
-                </mat-form-field>
-               </p>
-            </div>
-            <div class="col-sm-5">
-               <p>
-                  <label style="margin-right: 10px;">Cantidad:</label>
-                  <mat-form-field appearance="outline">
-                   <mat-label>Cantidad de producto</mat-label>
-                   <input
-                      type="number"
-                      min="0"
-                      matInput
-                      placeholder="Cantidad de producto"
-                      autocomplete="off"
-                      formControlName="cantidad"
-                      id="cantidad"
-                      [errorStateMatcher]="matcher"
-                      
-                      />
-                   <mat-error
-                      *ngIf="
-                      form.get('cantidad')?.hasError('pattern') &&
-                      !form.get('cantidad')?.hasError('required')
-                      "
-                      >
-                      <strong class="txt_msg">**Solo se admiten numeros enteros</strong>
-                   </mat-error>
-                   <mat-error *ngIf="form.get('cantidad')?.hasError('required')"
-                      ><strong class="txt_msg">**Campo requerido</strong></mat-error
-                      >
-                </mat-form-field>
-               </p>
-             
-            </div>
-<div class="row">
-         <div class="col-sm-6">
-            <p>
-               <label  style="margin-right: 10px;">Precio compra:</label>
-               <mat-form-field appearance="outline"  style="margin-right: 35px;width: 51%;" required>
-                 <mat-label>Precio de compra</mat-label>
-                 <input
-                   matInput
-                   placeholder="$"
-                   type="number"
-                   min="0"
-                   step="0.01"
-                   autocomplete="off"
-                   formControlName="precioCompra"
-                   id="precioCompra"
-                   [errorStateMatcher]="matcher"
-                 />
-   
-                 <mat-error
-                   *ngIf="
-                     form.get('precioCompra')?.hasError('pattern') &&
-                     !form.get('precioCompra')?.hasError('required')
-                   "
-                 >
-                   <strong class="txt_msg">**Solo se admiten dos decimales</strong>
-                 </mat-error>
-                 <mat-error *ngIf="form.get('precioCompra')?.hasError('required')"
-                   ><strong class="txt_msg">**Campo requerido</strong></mat-error
-                 >
-               </mat-form-field>
-             </p>
-         </div>
-         <div class="col-sm-6">
-            <P>
-               <label style="margin-right: 10px;">Precio venta:</label>
-               <mat-form-field appearance="outline"  style="margin-right: 35px;width: 50%;" required>
-                 <mat-label >Precio de venta</mat-label>
-                 <input
-                   matInput
-                   placeholder="$"
-                   type="number"
-                   min="0"
-                   step="0.01"
-                   autocomplete="off"
-                   formControlName="precioVenta"
-                   id="precioVenta"
-                   [errorStateMatcher]="matcher"
-                 />
-   
-                 <mat-error
-                   *ngIf="
-                     form.get('precioVenta')?.hasError('pattern') &&
-                     !form.get('precioVenta')?.hasError('required')
-                   "
-                 >
-                   <strong class="txt_msg">**Solo se admiten dos decimales</strong>
-                 </mat-error>
-                 <mat-error *ngIf="form.get('precioCompra')?.hasError('required')"
-                   ><strong class="txt_msg">**Campo requerido</strong></mat-error
-                 >
-               </mat-form-field>
-             </P>
-         </div>
-      </div>
-            <div class="col-sm-2">
-             <button type="button" mat-raised-button (click)="agregarATabla()" style="margin-top: 10px;background-color: #fd9727; width: 100%;"><mat-icon>add</mat-icon>Agregar</button>
-           </div>
-           </div>
- 
-            <br>
-            <table class="table" >
-             <thead>
-                <tr>
-                   <th>Producto</th>
-                   <th>Cantidad</th>
-                   <th>Fecha</th>
-                   <th>Precio compra</th>
-                   <th>Precio venta</th>
-                   <!-- Agrega más columnas según tus campos -->
-                </tr>
-             </thead>
-             <tbody>
-                <tr *ngFor="let dato of tablaDatos">
-                   <td>{{ dato.nombreProducto }}</td>
-                   <td>{{ dato.cantidad }}</td>
-                   <td>{{ dato.fechaEntrada }}</td>
-                   <td>{{dato.precioCompra}}</td>
-                   <td>{{dato.precioVenta}}</td>
-                   <!-- Agrega más columnas según tus campos -->
-                </tr>
-             </tbody>
-          </table>
-          <div style="margin: auto; display: block; text-align: center;">
-           
-             <button type="submit" mat-raised-button id="btn_guardar" style="background-color: #fd9727; font-size: 20px; margin-top: 50px; height: 40px; width: 100px; color: black">
-             Guardar
-             </button>
-             <button
-             style="background-color: #000000; font-size: 20px; margin-left: 30px; margin-top: 50px; height: 40px; width: 100px;color: rgb(255, 255, 255);"
-                mat-raised-button
-                id="btn_canelar"
-                routerLink="../home"
-                >
-             Cancelar
-             </button>
-            </div>
-             </form>
+                    
+                    </div>
           
-          <!-- Botón para agregar datos a la tabla -->
-          
-          
-         </div>
+                     <br>
+                     <div *ngIf="tablaDatos && tablaDatos.length > 0">
+                     <table class="table" >
+                      <thead>
+                         <tr>
+                            <th>Producto</th>
+                            <th>Cantidad</th>
+                            
+                            <th>Precio compra</th>
+                            <th>Precio venta</th>
+                            <th>Fecha</th>
+                            <!-- Agrega más columnas según tus campos -->
+                         </tr>
+                      </thead>
+                      <tbody>
+                         <tr *ngFor="let dato of tablaDatos">
+                            <td>{{ dato.nombreProducto }}</td>
+                            <td>{{ dato.cantidad }}</td>
+                            
+                            <td>{{dato.precioCompra}}</td>
+                            <td>{{dato.precioVenta}}</td>
+                            <td>{{ dato.fechaEntrada }}</td>
+                            <!-- Agrega más columnas según tus campos -->
+                         </tr>
+                      </tbody>
+                   </table>
+                  </div>
+                   <div style="margin: auto; display: block; text-align: center;">
+                    
+                      <button mat-raised-button  (click)="registrar()" id="btn_guardar" style="background-color: #64c9cf; font-size: 20px; margin-top: 50px; height: 35px; width: 120px; color: black">
+                      Guardar
+                      </button>
+                      <button
+                      style="background-color: #000000; font-size: 20px; margin-left: 30px; margin-top: 50px; height: 35px; width: 120px;color: rgb(255, 255, 255);"
+                         mat-raised-button
+                         id="btn_canelar"
+                         (click)="cerrarDialogo()"
+                         >
+                      Cancelar
+                      </button>
+                     </div>
+                      </form>
+                   
+                   <!-- Botón para agregar datos a la tabla -->
+                   
+                   
+                  </div>
+               </div>
+
+            </mat-tab>
+         </mat-tab-group>
+      
       </div>
    </div>
  </div>
