--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,209 +1,206 @@
 <!DOCTYPE html>
 <body>
-  <div class="container mt-4">
-    <!-- <h1 class="mb-3">Bienvenido {{ rol }} sucursal: {{ubicacion}}</h1>
-    
-     <div class="row justify-content-center">
-      <div class="col-md-4">
-        <div class="card custom-border mx-auto">
-          <div class="card-body">
-           <h4 class="card-title">Top 5 de los productos más vendidos</h4>
-            <strong class="txt_msg"> {{ mesActual }} - {{ anioActual}}</strong>
-
-            <div *ngIf="topProductos && topProductos.length > 0">
-              <ol>
-                <li *ngFor="let producto of topProductos">
-                  {{ producto.nombreProducto }}
-                </li>
-              </ol>
+   <div class="container mt-4">
+      <!-- <h1 class="mb-3">Bienvenido {{ rol }} sucursal: {{ubicacion}}</h1>
+         <div class="row justify-content-center">
+          <div class="col-md-4">
+            <div class="card custom-border mx-auto">
+              <div class="card-body">
+               <h4 class="card-title">Top 5 de los productos más vendidos</h4>
+                <strong class="txt_msg"> {{ mesActual }} - {{ anioActual}}</strong>
+                <div *ngIf="topProductos && topProductos.length > 0">
+                  <ol>
+                    <li *ngFor="let producto of topProductos">
+                      {{ producto.nombreProducto }}
+                    </li>
+                  </ol>
+                </div>
+                <div *ngIf="!topProductos || topProductos.length === 0">
+                  <strong class="txt_msg">**Aún no hay productos vendidos en este mes.</strong>
+                </div>
+                <a class="btn btn-gym" routerLink="../proveedores">Consultar</a>
+              </div>
             </div>
-            
-            <div *ngIf="!topProductos || topProductos.length === 0">
-              <strong class="txt_msg">**Aún no hay productos vendidos en este mes.</strong>
+          </div>
+         </div>-->
+      <div class="row mt-4">
+         <div class="col-md-6" >
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Sucursales</h4>
+                  <p class="card-text">Consulta las categorias de producto de la Franquicia</p>
+                  <a class="btn btn-gym" routerLink="../listaSucursales">Consultar</a>
+               </div>
             </div>
-          
-            <a class="btn btn-gym" routerLink="../proveedores">Consultar</a>
-          </div>
-        </div>
-      </div>
-    </div>-->
-    <br />
-    
-    <div class="row">
-      <!--<div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Proveedores</h4>
-            <p class="card-text">1° Consulta los proveedores disponibles de la Franquicia</p>
-            <a class="btn btn-gym" routerLink="../proveedores">Consultar</a>
-          </div>
-        </div>
-      </div>-->
-
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Mis membresias</h4>
-            <p class="card-text">2° Consulta las categorias de producto de la Franquicia</p>
-            <a class="btn btn-gym" routerLink="../misMembresias">Consultar</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Inventario</h4>
-            <p class="card-text">5° Consulta el inventario de tu sucursal</p>
-            <a class="btn btn-gym" routerLink="../inventario">Consultar</a>
-          </div>
-        </div>
-      </div>
-
-      
-    </div>
-
-    <div class="row mt-4">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Productos</h4>
-            <p class="card-text">3° Consulta el catalogo de productos de la Franquicia</p>
-            <a class="btn btn-gym" routerLink="../productos">Consultar</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Entradas</h4>
-            <p class="card-text">4° Configura las entradas de producto para tu sucursal</p>
-            <a class="btn btn-gym" routerLink="../entradas">Configurar</a>
-          </div>
-        </div>
-      </div> 
-    </div>
-    
-    <div class="row mt-4">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Categorias</h4>
-            <p class="card-text">2° Consulta las categorias de producto de la Franquicia</p>
-            <a class="btn btn-gym" routerLink="../categorias">Consultar</a>
-          </div>
-        </div>
-      </div>
-      
-     <!-- <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Transferencias</h4>
-            <p class="card-text">Aqui podras verificar los productos que te envia otra sucursal</p>
-            <a class="btn btn-gym" routerLink="../validarTransferencia">Ir</a>
-          </div>
-        </div>
-      </div>-->
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Listado de productos vendidos</h4>
-              <p class="card-text">6° Consulta los productos vendidos</p>
-              <a class="btn btn-gym" routerLink="../productosVendidos">Consultar</a>
+         </div>
+         <div class="col-md-6" >
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Sucursales</h4>
+                  <p class="card-text">Consulta las categorias de producto de la Franquicia</p>
+                  <a class="btn btn-gym" routerLink="../listaSucursales">Consultar</a>
+               </div>
             </div>
-        </div>
+         </div>
       </div>
-    
-    </div>
-
-    <!--Apartados de RECEPCIONISTA--->
-    <div class="row mt-4">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Ventas</h4>
-            <p class="card-text">Configura las ventas de tu gimansio</p>
-            <a class="btn btn-gym" routerLink="../productos">Configurar</a>
-          </div>
-        </div>
+      <div class="row mt-4">
+         <!--<div class="col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Proveedores</h4>
+                <p class="card-text">1° Consulta los proveedores disponibles de la Franquicia</p>
+                <a class="btn btn-gym" routerLink="../proveedores">Consultar</a>
+              </div>
+            </div>
+            </div>-->
+         <div class="col-md-6" >
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Mis membresias</h4>
+                  <p class="card-text">Consulta las categorias de producto de la Franquicia</p>
+                  <a class="btn btn-gym" routerLink="../misMembresias">Consultar</a>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6" >
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Inventario</h4>
+                  <p class="card-text">Consulta el inventario de tu sucursal</p>
+                  <a class="btn btn-gym" routerLink="../inventarios">Consultar</a>
+               </div>
+            </div>
+         </div>
       </div>
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Membresias</h4>
-            <p class="card-text">Configura las membresias de tu gimanasio</p>
-            <a class="btn btn-gym" routerLink="../listaMembresias">Configurar</a>
-          </div>
-        </div>
-      </div> 
-    </div>
-    
-    <div class="row mt-4">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Inventarios</h4>
-            <p class="card-text">Configura los inventarios de tu gimnasio</p>
-            <a class="btn btn-gym" routerLink="../inventarios">Configurar</a>
-          </div>
-        </div>
+      <div class="row mt-4">
+         <div class="col-md-6">
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Productos</h4>
+                  <p class="card-text"> Consulta el catalogo de productos de la Franquicia</p>
+                  <a class="btn btn-gym" routerLink="../productos">Consultar</a>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6">
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Entradas</h4>
+                  <p class="card-text"> Configura las entradas de producto para tu sucursal</p>
+                  <a class="btn btn-gym" (click)="entradas()">Configurar</a>
+               </div>
+            </div>
+         </div>
       </div>
-
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Registro</h4>
-            <p class="card-text">Registrar a un cliente</p>
-            <a class="btn btn-gym" routerLink="../registrar">Registrar Ahora</a>
-          </div>
-        </div>
+      <div class="row mt-4">
+         <div class="col-md-6">
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Categorias</h4>
+                  <p class="card-text"> Consulta las categorias de producto de la Franquicia</p>
+                  <a class="btn btn-gym" routerLink="../categorias">Consultar</a>
+               </div>
+            </div>
+         </div>
+         <!-- <div class="col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Transferencias</h4>
+                <p class="card-text">Aqui podras verificar los productos que te envia otra sucursal</p>
+                <a class="btn btn-gym" routerLink="../validarTransferencia">Ir</a>
+              </div>
+            </div>
+            </div>-->
+         <div class="col-md-6">
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Listado de productos vendidos</h4>
+                  <p class="card-text">Consulta los productos vendidos</p>
+                  <a class="btn btn-gym" routerLink="../productosVendidos">Consultar</a>
+               </div>
+            </div>
+         </div>
       </div>
-    </div>
-
-    <div class="row mt-4">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Ventas</h4>
-            <p class="card-text">Consultar las ventas</p>
-            <a class="btn btn-gym" (click)="ventas()">Configurar</a>
-          </div>
-        </div>
+      <!--Apartados de RECEPCIONISTA--->
+      <div class="row mt-4">
+         <!--<div class="col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Ventas</h4>
+                <p class="card-text">Configura las ventas de tu gimansio</p>
+                <a class="btn btn-gym" routerLink="../productos">Configurar</a>
+              </div>
+            </div>
+            </div>-->
+         <div class="col-md-6">
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Membresias</h4>
+                  <p class="card-text">Configura las membresias de tu gimanasio</p>
+                  <a class="btn btn-gym" routerLink="../listaMembresias">Configurar</a>
+               </div>
+            </div>
+         </div>
       </div>
-
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Ver corte</h4>
-            <p class="card-text">Consultar el corte de caja</p>
-            <a class="btn btn-gym" routerLink="../verCorte">Ver Ahora</a>
-          </div>
-        </div>
+      <div class="row mt-4">
+         <div class="col-md-6">
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Inventarios</h4>
+                  <p class="card-text">Configura los inventarios de tu gimnasio</p>
+                  <a class="btn btn-gym" routerLink="../inventarios">Configurar</a>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6">
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Registro</h4>
+                  <p class="card-text">Registrar a un cliente</p>
+                  <a class="btn btn-gym" routerLink="../registrar">Registrar Ahora</a>
+               </div>
+            </div>
+         </div>
       </div>
-    </div>
-
-    <div class="row mt-4">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Productos vendidos</h4>
-            <p class="card-text">Consultar los productos vendidos</p>
-            <a class="btn btn-gym" routerLink="../productosVendidos">Consultar</a>
-          </div>
-        </div>
+      <div class="row mt-4">
+         <div class="col-md-6">
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Ventas</h4>
+                  <p class="card-text">Consultar las ventas</p>
+                  <a class="btn btn-gym" (click)="ventas()">Configurar</a>
+               </div>
+            </div>
+         </div>
+         <div class="col-md-6">
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Ver corte</h4>
+                  <p class="card-text">Consultar el corte de caja</p>
+                  <a class="btn btn-gym" routerLink="../verCorte">Ver Ahora</a>
+               </div>
+            </div>
+         </div>
       </div>
-
-      <!--<div class="col-md-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Ver corte</h4>
-            <p class="card-text">Consultar el corte de caja</p>
-            <a class="btn btn-gym" routerLink="../verCorte">Ver Ahora</a>
-          </div>
-        </div>
-      </div>-->
-    </div>
-
-    
-  </div>
+      <div class="row mt-4">
+         <!-- <div class="col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Productos vendidos</h4>
+                <p class="card-text">Consultar los productos vendidos</p>
+                <a class="btn btn-gym" routerLink="../productosVendidos">Consultar</a>
+              </div>
+            </div>
+            </div>-->
+         <!--<div class="col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Ver corte</h4>
+                <p class="card-text">Consultar el corte de caja</p>
+                <a class="btn btn-gym" routerLink="../verCorte">Ver Ahora</a>
+              </div>
+            </div>
+            </div>-->
+      </div>
+   </div>
 </body>
