--- a/src/app/modules/productos/productos.component.html
+++ b/src/app/modules/productos/productos.component.html
@@ -4,7 +4,7 @@
   <div style="text-align: right; margin-bottom: 50px">
     <button
         mat-raised-button
-        routerLink="/admin/crearProducto"
+        (click)="crearProducto()"
         style="background-color: #fd9727; font-size: 16px; margin-right: 100px"
       >
         <mat-icon>add</mat-icon>AGREGAR PRODUCTO
