--- a/src/app/modules/sucursal-lista/sucursal-lista.component.css
+++ b/src/app/modules/sucursal-lista/sucursal-lista.component.css
@@ -1,23 +1,76 @@
 /* Estilos para el contenedor de la tabla */
 .table-container {
-    overflow-x: auto; /* Agrega una barra de desplazamiento horizontal si es necesario */
-    max-width: 100%; /* Evita que la tabla se desborde del contenedor */
-  }
-  
-  /* Estilos para la tabla */
-  table {
-    width: 90%; /* Ocupa todo el ancho del contenedor */
-    border-collapse: collapse; /* Combina los bordes de las celdas */
-  }
-  
-  /* Estilos para las celdas y filas */
-  th, td {
-    padding: 8px; /* Espaciado interno */
-    text-align: left; /* Alineación del texto a la izquierda */
-    white-space: nowrap; /* Evita el desbordamiento de texto */
-  }
-  
-  /* Estilos adicionales según sea necesario */
-  .example-full-width {
-    width: 100%;
-  }
+  overflow-x: auto; /* Agrega una barra de desplazamiento horizontal si es necesario */
+  max-width: 100%; /* Evita que la tabla se desborde del contenedor */
+}
+
+/* Estilos para la tabla */
+table {
+  width: 90%; /* Ocupa todo el ancho del contenedor */
+  border-collapse: collapse; /* Combina los bordes de las celdas */
+}
+
+/* Estilos para las celdas y filas */
+th, td {
+  padding: 8px; /* Espaciado interno */
+  text-align: left; /* Alineación del texto a la izquierda */
+  white-space: nowrap; /* Evita el desbordamiento de texto */
+}
+
+/* Estilos adicionales según sea necesario */
+.example-full-width {
+  width: 100%;
+}
+
+.check_circle {
+  color: green;
+}
+
+.cancel {
+  color: red;
+}
+
+.buton_location {
+  width: 100%;
+  border: none;
+}
+
+.toggle-container {
+  float: left;
+  margin-right: 10px;
+}
+
+.toggle-checkbox {
+  display: none; /* Oculta el checkbox nativo */
+}
+
+.toggle-label {
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  background-color: #ccc;
+  border-radius: 10px;
+  position: relative;
+  cursor: pointer;
+}
+
+.toggle-label:before {
+  content: '';
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  background-color: #fff;
+  border-radius: 50%;
+  top: 1px;
+  left: 1px;
+  transition: transform 0.3s ease;
+}
+
+/* Estilo para el toggle button cuando está activo */
+.toggle-checkbox:checked + .toggle-label:before {
+transform: translateX(20px) !important;
+}
+
+.toggle-checkbox:checked + .toggle-label {
+background-color: #4CAF50 !important; /* Color de fondo cuando está activo */
+}
