puerto serial ok

--- a/src/app/modules/reports/reports.component.html
+++ b/src/app/modules/reports/reports.component.html
@@ -26,7 +26,8 @@
   <button class="btn btn-danger" (click)="consult()">Consultar información...</button>
 </form>
 <br/>
-<button class="btn btn-info" (click)="requestSerialPort()">Conectar y Enviar Datos</button>
+<button class="btn btn-danger" (click)="eventoX()">Selecciona puerto...</button>
+<button class="btn btn-info" (click)="enviarDatosPorPuertoSerial()">Conectar y Enviar Datos</button>
 <div>
     <canvas id="myChart"></canvas>
 </div>
