--- a/src/app/modules/entradas/entradas.component.html
+++ b/src/app/modules/entradas/entradas.component.html
@@ -199,7 +199,7 @@
                   </div>
                    <div style="margin: auto; display: block; text-align: center;">
                     
-                      <button mat-raised-button  (click)="registrar()" id="btn_guardar" style="background-color: #64c9cf; font-size: 20px; margin-top: 50px; height: 35px; width: 120px; color: black">
+                      <button mat-raised-button  (click)="registrar()" id="btn_guardar" style="background-color: #fd9727; font-size: 20px; margin-top: 50px; height: 35px; width: 120px; color: black">
                       Guardar
                       </button>
                       <button
