--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -1,35 +1,32 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <img class="logo_h" src="../../../../../assets/img/logo.jpeg" />
-    <button mat-fab class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="background: #FD9727; color: white;">
+
+    <!-- Utiliza el botón de menú en pantallas pequeñas -->
+    <button mat-icon-button [matMenuTriggerFor]="menu" style="background: #FD9727; color: white;" class="d-block d-lg-none">
       <mat-icon>menu</mat-icon>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        
-        <li class="nav-item" id="ops" >
-          <a class="nav-link" id="prueba" routerLink="./home" routerLinkActive="active">Inicio</a>
-        </li>
-       <!-- <li class="nav-item" id="ops" >
-          <a class="nav-link" id="prueba" routerLink="./inventario" routerLinkActive="active">Inventario</a>
-        </li>-->
-        <li class="nav-item" id="ops" >
-          <a class="nav-link" id="prueba" routerLink="./misMembresias" routerLinkActive="active">Membresías</a>
-        </li>
-        <li class="nav-item" id="ops" >
-          <a class="nav-link" id="prueba" routerLink="./verConfiguracion" routerLinkActive="active">Configuración</a>
-        </li>
-        <li class="nav-item" id="ops" >
-          <a class="nav-link" id="prueba" routerLink="./notificacion"  routerLinkActive="active">Notificación</a>
-        </li>
-        <li class="nav-item" id="op" >
-          <a class="nav-link" id="prueba" (click)="logout()"><fa-icon [icon]="['fas', 'power-off']" style="color: black;"></fa-icon></a>
-        </li>
 
-      <!-- <button class="btn" title="Cerrar sesión" (click)="logout()">
-          <fa-icon [icon]="['fas', 'power-off']"></fa-icon>
-        </button>-->
-      </ul>
+    <!-- Utiliza los elementos del menú como botones en pantallas grandes -->
+    <div class="d-none d-lg-flex">
+      <button class="btn" id="ops" routerLink="./home">Inicio</button>
+      <button class="btn" id="ops" routerLink="./misMembresias">Membresías</button>
+      <button class="btn" id="ops" routerLink="./verConfiguracion">Configuración</button>
+      <button class="btn" id="ops" routerLink="./notificacion">Notificación</button>
+      <button class="btn" id="op" (click)="logout()">
+        <fa-icon [icon]="['fas', 'power-off']" style="color: black;"></fa-icon>
+      </button>
     </div>
+
+    <!-- Define el menú desplegable con matMenu -->
+    <mat-menu #menu="matMenu" class="d-lg-none">
+      <button mat-menu-item routerLink="./home">Inicio</button>
+      <button mat-menu-item routerLink="./misMembresias">Membresías</button>
+      <button mat-menu-item routerLink="./verConfiguracion">Configuración</button>
+      <button mat-menu-item routerLink="./notificacion">Notificación</button>
+      <button mat-menu-item (click)="logout()">
+        <fa-icon [icon]="['fas', 'power-off']" style="color: black;"></fa-icon>
+      </button>
+    </mat-menu>
   </div>
 </nav>
