--- a/src/app/modules/productos/productos.component.html
+++ b/src/app/modules/productos/productos.component.html
@@ -54,7 +54,7 @@
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef> Acciones </th>
           <td mat-cell *matCellDef="let producto">
-            <button mat-icon-button color="primary" routerLink="/admin/editar-producto/{{ producto.idProducto }}">
+            <button mat-icon-button color="primary" (click)="editarProducto(producto.idProducto)" >
               <mat-icon>edit</mat-icon>
             </button>
             <!--<div class="toggle-container">
