--- a/src/app/modules/sucursal-alta/sucursal-alta.component.css
+++ b/src/app/modules/sucursal-alta/sucursal-alta.component.css
@@ -25,8 +25,12 @@
   .large-text {
     font-size: 20px;
   }
+
+  .content_margin {
+    width: 90%;
+    margin: auto;
+}
   
-  /* Estilos para .responsive-div */
   .responsive-div {
     width: 100%; /* El div ocupa todo el ancho disponible */
     height: 100%;
