--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -111,15 +111,24 @@
                <div class="card-body">
                   <h4 class="card-title">Ventas</h4>
                   <p class="card-text">Consultar las ventas de tu gimnasio</p>
-                  <a class="btn btn-gym" (click)="ventas()">Consultar</a>
+                  <a class="btn btn-gym" routerLink="../verCorte">Consultar</a>
                </div>
             </div>
          </div>
+        <!-- <div class="col-md-6">
+            <div class="card">
+               <div class="card-body">
+                  <h4 class="card-title">Ventas</h4>
+                  <p class="card-text">Consultar las ventas de tu gimnasio</p>
+                  <a class="btn btn-gym" (click)="ventas()">Consultar</a>
+               </div>
+            </div>
+         </div>-->
          <div class="col-md-6">
             <div class="card">
                <div class="card-body">
-                  <h4 class="card-title">Renovación de Membresías</h4>
-                  <p class="card-text">Configura la renovación de las membresías de tu gimnasio.</p>
+                  <h4 class="card-title">Pago de Membresías</h4>
+                  <p class="card-text">Configura el pago de las membresías de tu gimnasio.</p>
                   <a class="btn btn-gym" routerLink="../listaMembresias">Consultar</a>
                </div>
             </div>
@@ -141,15 +150,6 @@
                   <h4 class="card-title">Registro</h4>
                   <p class="card-text">Registrar a un cliente</p>
                   <a class="btn btn-gym" routerLink="../registrar">Registrar Ahora</a>
-               </div>
-            </div>
-         </div>
-         <div class="col-md-6">
-            <div class="card">
-               <div class="card-body">
-                  <h4 class="card-title">Ver corte</h4>
-                  <p class="card-text">Consultar el corte de caja</p>
-                  <a class="btn btn-gym" routerLink="../verCorte">Ver Ahora</a>
                </div>
             </div>
          </div>
