--- a/src/app/modules/ver-corte/ver-corte.component.css
+++ b/src/app/modules/ver-corte/ver-corte.component.css
@@ -374,3 +374,25 @@ option {
   margin-bottom: 5px;
 }
 
+.boton-transparente {
+  background: transparent;
+  border: 2px solid #F9A640; /* Color naranja */
+  color: #000000; /* Color naranja */
+  padding: 5px 10px;
+  width: 160px;
+  height: 48px;
+  cursor: pointer;
+  font-size: 17px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background 0.3s ease, color 0.3s ease, border 0.3s ease;
+}
+
+.boton-transparente:hover {
+  background: #FD9727; /* Color naranja al pasar el ratón por encima */
+  color: #fff; /* Texto blanco al pasar el ratón por encima */
+}
