--- a/src/app/modules/ver-corte/ver-corte.component.html
+++ b/src/app/modules/ver-corte/ver-corte.component.html
@@ -1,6 +1,7 @@
 <div class="container mt-4">
    <h1>VENTAS</h1>
-   <label style="font-size: medium;">Reporte que muestra las ventas del gimnasio por fechas</label>
+   <label style="font-size: medium;">Reporte que muestra las ventas del gimnasio por fechas</label> <br><br>
+   <button (click)="ventas()"  class="boton-transparente"><img src="https://cdn-icons-png.flaticon.com/512/6822/6822288.png" style="width: 20%; margin-right: 10px;">Nueva venta</button>
    <div >
       <br>
       <div class="row">
@@ -19,7 +20,7 @@
             </ng-container>
          </div>
          <div class="col-sm-6">
-            <div style="display: flex; justify-content: flex-end;">
+            <div style="display: flex; justify-content: flex-end;margin-top: 30px;">
                <button mat-button [matMenuTriggerFor]="menu2" class="download-button">
                   <mat-icon class="download-icon">cloud_download</mat-icon>
                   <span class="download-text">Descargar Reporte</span>
@@ -31,7 +32,7 @@
             </div>
          </div>
       </div>
-      <div class="row">
+      <!--<div class="row">
          <div class="col-sm-12">
             <br>
             <p>Filtro por producto:</p>
@@ -45,7 +46,8 @@
                <i class="material-icons search-ico">search</i>
             </div>
          </div>
-      </div>
+      </div>-->
+      
       <div class="total-ventas">
          <p class="total-label">Total: <strong style="margin-left: 20px;">{{ totalVentas | currency:'USD':'symbol':'1.2-2' }}</strong></p>
          <p class="total-amount"></p>
