--- a/src/app/modules/emergente-info-cliente/emergente-info-cliente.component.html
+++ b/src/app/modules/emergente-info-cliente/emergente-info-cliente.component.html
@@ -23,6 +23,63 @@
             <h3 style="font-weight: bold;">Información de la membresia:</h3> {{ data.infoMembresia }}
         </div>
     </div>
+
+    <br>
+
+    <h3 style="font-weight: bold;">Historial de membresias adquiridas:</h3>
+
+    <div  class="table-container">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+            <th mat-header-cell *matHeaderCellDef style="text-align: center;">{{ column }}</th>
+            <td mat-cell *matCellDef="let memCli" style="text-align: center;">
+              <ng-container *ngIf="column === 'ID'">
+                {{ memCli.ID }}
+              </ng-container>
+              <ng-container *ngIf="column === 'Nombre'">
+                {{ memCli.Nombre }}
+              </ng-container>
+              <ng-container *ngIf="column === 'Membresía'">
+                {{ memCli.Membresia }}
+              </ng-container>
+              <ng-container *ngIf="column === 'Precio'">
+                ${{ memCli.Precio }}
+              </ng-container>
+              <ng-container *ngIf="column === 'Duración'">
+                {{ memCli.Duracion }} días
+              </ng-container>
+              <ng-container *ngIf="column === 'Fecha Inicio'">
+                {{ memCli.Fecha_Inicio }}
+              </ng-container>
+              <ng-container *ngIf="column === 'Fecha Fin'">
+                {{ memCli.Fecha_Fin }}
+              </ng-container>
+              <!--<ng-container *ngIf="column === 'Status'">
+                {{ memCli.Status }}
+              </ng-container>-->
+              <ng-container *ngIf="column === 'Status'">
+                <p>{{ memCli.Status }}</p>
+                <ng-container *ngIf="estaEnRango(memCli.Fecha_Inicio, memCli.Fecha_Fin) && memCli.Status === 'Activo'">
+                    <mat-icon style="color:green">timer</mat-icon>
+                </ng-container>
+                <ng-container *ngIf="estaEnRango(memCli.Fecha_Inicio, memCli.Fecha_Fin) && memCli.Status !== 'Activo'">
+                    <mat-icon style="color:red">timer_off</mat-icon>
+                </ng-container>
+                <ng-container *ngIf="!estaEnRango(memCli.Fecha_Inicio, memCli.Fecha_Fin) && memCli.Status !== 'Activo'">
+                    <mat-icon style="color:red">timer_off</mat-icon>
+                </ng-container>
+                <ng-container *ngIf="!estaEnRango(memCli.Fecha_Inicio, memCli.Fecha_Fin) && memCli.Status === 'Activo'">
+                    <mat-icon style="color:greenyellow">timer</mat-icon>
+                </ng-container>
+              </ng-container>
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let productofila; columns: displayedColumns"></tr>
+        </table>
+      </div>
+        <mat-paginator #paginatorHistorialMembre [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
+
 </div>
 <div mat-dialog-actions fxLayoutAlign="center center">
     <button mat-button (click)="abrirDialogFoto(data)" (click)="cerrarDialogo()">Tomar Foto</button>
